force-app/main/default/objects/Form_Template_Version__c/Form_Template_Version__c.object-meta.xml
<CustomObject>
    <label>Form Template Version</label>
    <pluralLabel>Form Template Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
<nameField>
    <label>Version Name</label>
    <type>Text</type>
</nameField>
</CustomObject>