force-app/main/default/objects/Form_Template_Version__c/fields/Effective_End__c.field-meta.xml
<CustomField>
    <fullName>Effective_End__c</fullName>
    <label>Effective End</label>
    <type>Date</type>
</CustomField>