force-app/main/default/objects/Form_Template_Version__c/fields/Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start__c</fullName>
    <label>Effective Start</label>
    <type>Date</type>
</CustomField>