force-app/main/default/objects/Form_Template_Version__c/fields/Form_Template__c.field-meta.xml
    <CustomField>
        <fullName>Form_Template__c</fullName>
        <label>Form Template</label>
        <type>MasterDetail</type>
        <referenceTo>Form_Template__c</referenceTo>
        <relationshipLabel>Template Versions</relationshipLabel>
        <relationshipName>TemplateVersions</relationshipName>
<relationshipOrder>0</relationshipOrder>
    </CustomField>