force-app/main/default/objects/Form_Template_Version__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
        <fullName>Draft</fullName>
    </value>
<value>
        <fullName>Published</fullName>
    </value>
<value>
        <fullName>Retired</fullName>
    </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>